Fix overflow

--- a/assets/less/component/_main.less
+++ b/assets/less/component/_main.less
@@ -265,14 +265,13 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 667px) {
   .banner {
     &-right {
       .flex-main--around;
       align-items: center;
     }
   }
-
   .product {
     &-container {
       .flex-main--around;
