--- a/assets/less/global/_gereral.less
+++ b/assets/less/global/_gereral.less
@@ -32,6 +32,7 @@ button {
   display: flex;
   flex-wrap: wrap;
   margin: 0 -15px;
+  width: 100%;
 }
 
 .col (@width) {
